--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "~4.16.4",
-    "uuid": "3.3.2"
+    "uuid": "3.3.2",
+    "supertest": "^3.3.0",
+    "mocha": "^5.2.0"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mocha"
   }
 }
