--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "express": "~4.16.4",
     "uuid": "3.3.2",
     "supertest": "^3.3.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "mongodb": "^3.1.10"
   },
   "scripts": {
     "start": "node server.js",
